--- a/templates/index.html
+++ b/templates/index.html
@@ -17,11 +17,11 @@
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-white mb-4">
   <div class="container">
-    <a class="navbar-brand fw-bold" href="/">LeadFinder<span class="text-primary">SaaS</span></a>
+    <a class="navbar-brand fw-bold" href="/">Lead<span class="text-primary">Finder</span></a>
     <div>
-      <a href="/" class="btn btn-link">Email Finder</a>
-      <a href="/bulk-verify" class="btn btn-link">Bulk Email Verifier</a>
+      <a href="/" class="btn btn-link">Lead Contact Finder</a>
       <a href="/single-verify" class="btn btn-link">Single Email Verify</a>
+      <a href="/bulk-verify" class="btn btn-link">Bulk Email Verifier</a>
     </div>
   </div>
 </nav>
@@ -59,7 +59,7 @@
       </ul>
     </div>
   {% endif %}
-  <div class="footer">&copy; {{ 2025 }} LeadFinderSaaS. All rights reserved.</div>
+  <div class="footer">&copy; {{ 2025 }} LeadFinder. All rights reserved.</div>
 </div>
 </body>
 </html>
