--- a/templates/single_verify.html
+++ b/templates/single_verify.html
@@ -8,7 +8,7 @@
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-white mb-4">
   <div class="container">
-    <a class="navbar-brand fw-bold" href="/">LeadFinder<span class="text-primary">SaaS</span></a>
+    <a class="navbar-brand fw-bold" href="/">Lead<span class="text-primary">Finder</span></a>
     <div>
       <a href="/" class="btn btn-link">Lead Contact Finder</a>
       <a href="/single-verify" class="btn btn-link">Single Email Verify</a>
