single-bulk-sson

--- a/templates/single_verify.html
+++ b/templates/single_verify.html
@@ -48,6 +48,7 @@
             </div>
             <button class="btn btn-primary w-100">Verify</button>
         </form>
+        <button class="btn btn-secondary w-100 mt-3" disabled title="Coming soon!">Bulk Verify (Coming Soon)</button>
     </div>
     {% if result %}
     <div class="card p-4 mb-4">
