--- a/templates/single_verify.html
+++ b/templates/single_verify.html
@@ -38,7 +38,7 @@
   <div class="container">
     <a class="navbar-brand fw-bold" href="/">Lead<span class="text-primary">Finder</span></a>
     <div>
-      <a href="/" class="btn btn-link">Lead Contact Finder</a>
+      <a href="/" class="btn btn-link">Email Finder</a>
       <a href="/single-verify" class="btn btn-link">Single Email Verify</a>
       <a href="/bulk-verify" class="btn btn-link">Bulk Email Verifier</a>
       <span id="user-info" class="ms-3"></span>
