--- a/templates/single_verify.html
+++ b/templates/single_verify.html
@@ -48,6 +48,7 @@
       <a href="/" class="btn btn-link">Email Finder</a>
       <a href="/single-verify" class="btn btn-link">Single Email Verify</a>
       <a href="/bulk-verify" class="btn btn-link">Bulk Email Verifier</a>
+      <a href="mailto:peter@ijanta.com" class="btn btn-link">Support</a>
       <span id="user-info" class="ms-3"></span>
       <button id="login-btn" class="btn btn-outline-primary ms-2">Sign in with Google</button>
       <button id="logout-btn" class="btn btn-outline-secondary ms-2" style="display:none;">Sign Out</button>
